--- a/WebContent/pages/financeiro/tipo_contas/list.xhtml
+++ b/WebContent/pages/financeiro/tipo_contas/list.xhtml
@@ -163,7 +163,7 @@
           <div class="card shadow mb-4">
             	<div class="card-body">
             		<h:form>
-            			<h:dataTable value="#{usuarioController.todosUsuarios}" var="usuario" class="table table-hover">
+            			<h:dataTable value="#{tipoContasController.tipoContas}" var="tipoContas" class="table table-hover">
             				
             				<h:column>
             					<f:facet name="header">
