--- a/WebContent/pages/limpeza/limpeza/edit.xhtml
+++ b/WebContent/pages/limpeza/limpeza/edit.xhtml
@@ -185,19 +185,19 @@
 				
 				<div class="form-group">
                     <label for="idStatus">Status</label>
-                    <h:selectOneMenu class="form-control form-control-lg" id="idStatus" value="#{usuarioController.idTipoUsuario}">
+                    <h:selectOneMenu class="form-control form-control-lg" id="idStatus" value="#{tipoContasController.idTipoContas}">
 	                    <f:selectItem itemLabel = "Selecionar" noSelectionOption="true"/>
-	                    <f:selectItems value ="#{usuarioController.todosTiposUsuarios}"	
-	                    	var ="tipoUsuario" 
-	                    	itemLabel="#{tipoUsuario.name}"
-                    		itemValue="#{tipoUsuario.id}" 
+	                    <f:selectItems value ="#{tipoContasController.todosTiposConta}"	
+	                    	var ="tipoContas" 
+	                    	itemLabel="#{tipoContas.tipo}"
+                    		itemValue="#{tipoContas.credor}" 
                     	/>
                   </h:selectOneMenu>
                 </div>               
 				
 				<div class="form-group d-flex justify-content-between">
 					<a href="http://localhost:8080/reppy/pages/limpeza/limpeza/list.xhtml" type="button" class="btn btn-primary btn-lg">Voltar</a>
-					<h:commandButton id="salvar" value="Salvar" action="#{usuarioController.salvar}" class="btn btn-success btn-lg"/>
+					<h:commandButton id="salvar" value="Salvar" action="#{tipoContasController.salvar}" class="btn btn-success btn-lg"/>
 				</div> 
               </h:form>
             </div>
