--- a/WebContent/pages/financeiro/contas/list.xhtml
+++ b/WebContent/pages/financeiro/contas/list.xhtml
@@ -180,7 +180,7 @@
 			                            Conta
 			                        </h:outputLabel>
 			                    </f:facet>
-            					<h:outputText value="Luz"/>
+            					<h:outputText value="{tipoContas.name}"/>
             				</h:column>
             				<h:column class="text-center">
             					<f:facet name="header" >
