--- a/WebContent/pages/mantimentos/local_armazenamento/list.xhtml
+++ b/WebContent/pages/mantimentos/local_armazenamento/list.xhtml
@@ -163,7 +163,7 @@
           <div class="card shadow mb-4">
             	<div class="card-body">
             		<h:form>
-            			<h:dataTable value="#{usuarioController.todosUsuarios}" var="usuario" class="table table-hover">
+            			<h:dataTable value="#{localMantimentosController.localMantimentos}" var="localMantimento" class="table table-hover">
             				
             				<h:column>
             					<f:facet name="header">
@@ -177,10 +177,10 @@
             				<h:column class="text-center">
             					<f:facet name="header" >
             						<h:outputLabel class="col-8">
-			                            Local
+			                            Nome
 			                        </h:outputLabel>
 			                    </f:facet>
-            					<h:outputText value="Armário"/>
+            					<h:outputText value="#{localMantimento.nome}"/>
             				</h:column>
             				<h:column>
             					<f:facet name="header" >
@@ -188,8 +188,8 @@
 			                            Ações
 			                        </h:outputLabel>
 			                    </f:facet> 
-            					<h:commandLink class="btn btn-primary ml-5 mr-2 edita" action="#{usuarioController.redirecionar(usuario)}" value="Edit"/>
-								<h:commandLink class="btn btn-danger" action="#{usuarioController.remover(usuario)}" value="Delete"/>
+            					<h:commandLink class="btn btn-primary ml-5 mr-2 edita" action="#{localMantimentosController.redirecionar(localMantimento)}" value="Edit"/>
+								<h:commandLink class="btn btn-danger" action="#{localMantimentosController.remover(localMantimento)}" value="Delete"/>
             				</h:column>
             			
             			</h:dataTable>
