--- a/WebContent/pages/mantimentos/tipo_mantimento/add.xhtml
+++ b/WebContent/pages/mantimentos/tipo_mantimento/add.xhtml
@@ -163,17 +163,17 @@
               <h:form>
              	<div class="form-group">
                     <label for="idNome">Nome</label>
-                    <h:inputText class="form-control form-control-lg" id="idNome" value="${usuarioController.usuario.senha}"/>
+                    <h:inputText class="form-control form-control-lg" id="idNome" value="${tipoMantimentosController.tipoMantimento.nome}"/>
                 </div> 
               	 		
                 <div class="form-group">
 				    <label for="idDescricao">Descrição</label>
-				    <h:inputTextarea class="form-control form-control-lg" id="idDescricao" value="${tipoUsuarioController.tipoUsuario.descricao}"/>
+				    <h:inputTextarea class="form-control form-control-lg" id="idDescricao" value="${tipoMantimentosController.tipoMantimento.descricao}"/>
 				</div>               
 				
 				<div class="form-group d-flex justify-content-between">
 					<a href="http://localhost:8080/reppy/pages/mantimentos/tipo_mantimento/list.xhtml" type="button" class="btn btn-primary btn-lg">Voltar</a>
-					<h:commandButton id="salvar" value="Salvar" action="#{usuarioController.salvar}" class="btn btn-success btn-lg"/>
+					<h:commandButton id="salvar" value="Salvar" action="#{tipoMantimentosController.salvarDados}" class="btn btn-success btn-lg"/>
 				</div> 
               </h:form>
             </div>
