--- a/WebContent/pages/financeiro/tipo_contas/add.xhtml
+++ b/WebContent/pages/financeiro/tipo_contas/add.xhtml
@@ -163,12 +163,12 @@
               <h:form>
              	<div class="form-group">
                     <label for="idTipo">Tipo</label>
-                    <h:inputText class="form-control form-control-lg" id="idTipo" value="${tipoContasController.tipoConta.tipo}"/>
+                    <h:inputText class="form-control form-control-lg" id="idTipo" value="${tipoContasController.tipoContas.tipodeConta}"/>
                 </div> 
               	 		
                 <div class="form-group">
 				    <label for="idCredor">Credor</label>
-				    <h:inputTextarea class="form-control form-control-lg" id="idCredor" value="${tipoContasController.tipoConta.credor}"/>
+				    <h:inputTextarea class="form-control form-control-lg" id="idCredor" value="${tipoContasController.tipoContas.credor}"/>
 				</div>               
 				
 				<div class="form-group d-flex justify-content-between">
